Fix issues with fieldset on mobile

--- a/src/styles/base-forms.less
+++ b/src/styles/base-forms.less
@@ -39,28 +39,36 @@ input[type='button'] {
   .button(@font-color-base);
 }
 
+// Remove default fieldset styles
 .inline-field-group {
-  width: @field-width;
-  display: flex;
-  flex-direction: row;
   border: none;
   padding: 0;
-  margin: (@grid * 2) 0;
+  min-width: 0;
+  margin: 0;
+}
 
-  & > * {
-    margin-right: @grid * 2 !important;
+@media (min-width: @mobile-width) {
+  .inline-field-group {
+    width: @field-width;
+    display: flex;
+    flex-direction: row;
+    margin: (@grid * 2) 0;
 
-    &:last-child {
-      margin-right: 0 !important;
+    & > * {
+      margin-right: @grid * 2 !important;
+
+      &:last-child {
+        margin-right: 0 !important;
+      }
     }
-  }
 
-  p {
-    margin: 0;
-  }
+    p {
+      margin: 0;
+    }
 
-  input {
-    width: 100%;
-    min-width: 0;
+    input {
+      width: 100%;
+      min-width: 0;
+    }
   }
 }
